# aldmg

./: CMakeLists.txt  README.md  alum.kdev4  index.html  params.json
cmake/: AldmgFiles.cmake  AlumFiles.cmake  DmglfaFiles.cmake
design/: requirements.txt
include/: aldmg.h  alum.h  bad.h
src/: aldmg.c  alum.c  alum_draw.c  alum_geometry.c  alum_listen.c  alum_support.c  alum_widgets.c  bad.c  main.c
